@@ -1,3 +1,7 @@
+2011-12-19  Valek Filippov
+
+		* Backported 'search list dbl-click' improvement from my other tool.
+
 2011-12-10  Valek Filippov
 
 		* Move some common functions to "utils".
